--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -155,6 +155,12 @@ body.slide-active {
 #app > .audio #controls > a { margin-right: 15px; }
 #app > .audio #lists { margin-top: 20px;margin-bottom: 70px; }
 
+#app > .audio button.update { margin-left: 1em; }
+#app > .audio #e { position: fixed; right: 1em; z-index: 100; }
+#app > .audio #l { line-height: 50px; }
+#app > .audio #t { color: #9d9d9d; height: 100%; line-height: 50px; overflow: hidden; position: absolute; width: 0%; white-space: nowrap; }
+#app > .audio #tl { bottom:0; height: 50px; left:0; position: absolute; right:0; width: 100%; }
+
       //body { padding: 70px 0; overflow: hidden; }
       //.form-group { margin: 9px; }
       //.list-group:last-child { padding-right: 0; }
