--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -1,22 +1,23 @@
 .form-group { margin: 9px; }
-/* adjust body when menu is open */
-body.slide-active {
-    overflow-x: hidden
-}
-/*first child of #page-content so it doesn't shift around*/
-.no-margin-top {
-    margin-top: 0px!important
-}
-/*wrap the entire page content but not nav inside this div if not a fixed top, don't add any top padding */
+body.slide-active { overflow-x: hidden}
+.no-margin-top { margin-top: 0px!important}
 #page-content {
     position: relative;
     padding-top: 70px;
     left: 0;
 }
-#page-content.slide-active {
-    padding-top: 0
+#page-content.slide-active { padding-top: 0}
+
+#slide-nav .navbar-toggle.slide-active .icon-bar.none { display:none;}
+#slide-nav .navbar-toggle.slide-active .icon-bar.forward {
+	transform: rotate(45deg);
+	margin-top:15px;
 }
-/* put toggle bars on the left :: not using button */
+#slide-nav .navbar-toggle.slide-active .icon-bar.backward {
+	transform: rotate(135deg);
+	margin-top:-3px;
+}
+
 #slide-nav .navbar-toggle {
     cursor: pointer;
     position: relative;
@@ -29,25 +30,20 @@ body.slide-active {
     border: 0;
     background: transparent;
 }
-/* icon bar prettyup - optional */
 #slide-nav .navbar-toggle > .icon-bar {
     width: 100%;
     display: block;
     height: 3px;
     margin: 5px 0 0 0;
 }
-#slide-nav .navbar-toggle.slide-active .icon-bar {
-    background: orange
-}
-.navbar-header {
-    position: relative
-}
-/* un fix the navbar when active so that all the menu items are accessible */
+#slide-nav .navbar-toggle.slide-active .icon-bar { background: #a94442; }
+.navbar-header { position: relative;}
 .navbar.navbar-fixed-top.slide-active {
     position: relative
 }
-/* screw writing importants and shit, just stick it in max width since these classes are not shared between sizes */
+
 @media (max-width:767px) { 
+	.navbar-nav>li>a { line-height: 32px; font-size: 20px; }
 	#slide-nav .container {
 	    margin: 0!important;
 	    padding: 0!important;
@@ -89,7 +85,6 @@ body.slide-active {
 	#slide-nav.navbar-inverse #slidemenu {
 	    background: #333
 	}
-	/* this is behind the navigation but the navigation is not inside it so that the navigation is accessible and scrolls*/
 	#navbar-height-col {
 	    position: fixed;
 	    top: 0;
@@ -109,25 +104,14 @@ body.slide-active {
 	    margin: 8px 0;
 	    text-align: center;
 	    overflow: hidden;
-	    /*fast clearfixer*/
 	}
-	#slide-nav .navbar-form .form-control {
-	    text-align: center
-	}
-	#slide-nav .navbar-form .btn {
-	    width: 100%
-	}
+	#slide-nav .navbar-form .form-control { text-align: center}
+	#slide-nav .navbar-form .btn { width: 100%}
 }
 @media (min-width:768px) { 
-	#page-content {
-	    left: 0!important
-	}
-	.navbar.navbar-fixed-top.slide-active {
-	    position: fixed
-	}
-	.navbar-header {
-	    left: 0!important
-	}
+	#page-content { left: 0!important}
+	.navbar.navbar-fixed-top.slide-active { position: fixed}
+	.navbar-header { left: 0!important}
 }
 
 #e { position: fixed; right: 1em; z-index: 9000; max-width: 97%; }
