--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -133,10 +133,9 @@ body.slide-active { overflow-x: hidden}
 #app > .home .table>tfoot>tr>th,
 #app > .home .table>thead>tr>td,
 #app > .home .table>thead>tr>th 
-{ border-top:0px; }
+  { border-top:0px; }
 #app > .audio { margin-top: -1em; }
 #app > .audio #lists { margin-bottom: 70px; }
-
 #app > .audio button.update { margin-left: 1em; }
 #app > .audio #e { position: fixed; right: 1em; z-index: 100; }
 #app > .audio #l { line-height: 50px; }
@@ -145,6 +144,7 @@ body.slide-active { overflow-x: hidden}
 #app > .audio #lists .list-group { margin-bottom: 70px; }
 #app > .audio #t { color: #9d9d9d; height: 100%; line-height: 50px; overflow: hidden; position: absolute; width: 0%; white-space: nowrap; }
 #app > .audio #tl { bottom:0; height: 50px; left:0; position: absolute; right:0; width: 100%; }
+#app > .git .status .btn { margin-bottom: 0.5em; }
 
 //body { padding: 70px 0; overflow: hidden; }
 //.form-group { margin: 9px; }
