--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -160,5 +160,6 @@ body.slide-active { overflow-x: hidden}
 //}
 #overlay { position: fixed; top: 0; right: 0; bottom: 0; left: 0; z-index: 9000; background: rgba(0,0,0,0.5); padding: 3em; }
 #overlay .panel-body { overflow: auto; }
+#overlay .line { word-break: break-word; margin-bottom: 0.25em; }
 #profile .container-fluid { margin-bottom: 1em; }
 #profile .pub { word-break: break-all;}
