--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -191,5 +191,5 @@ body.slide-active { overflow-x: hidden}
 #overlay .panel-body { overflow: auto; }
 #overlay .line { word-break: break-word; margin-bottom: 0.25em; }
 #profile .container-fluid { margin-bottom: 1em; }
-#profile .pub { word-break: break-all;}
+#profile .ssh { word-break: break-all;}
 #profile { margin-bottom: 50px; }
