--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -178,21 +178,21 @@ body.slide-active { overflow-x: hidden}
 #app > .git .status .btn { margin-bottom: 0.5em; }
 #app > .git .push-0, #app > .git .diff-00, #app > .git .all-000 { display: none; }
 
-#app > .edit .form-group { margin: 9px; }
-#app > .edit textarea { resize: none; }
-#app > .edit .list-group:last-child { padding-right: 0; }
-#app > .edit .list-group { margin-bottom: 0; }
-#app > .edit .list-group .list-group-item:nth-of-type(even) { background-color: #f9f9f9; }
-#app > .edit .list-group a:last-child { margin-bottom: 20px; }
-#app > .edit .list-group-item { cursor: pointer; overflow: hidden; white-space: nowrap; }
-#app > .edit .list-group-item img { position:absolute; top:0; right:0; height: 100%; }
-#app > .edit .navbar-brand { cursor: pointer; }
-#app > .edit .btn-danger { position: absolute; top:0;right:0;bottom:0;border:0;border-radius:0; }
+#app > .editor .form-group { margin: 9px; }
+#app > .editor textarea { resize: none; }
+#app > .editor .list-group:last-child { padding-right: 0; }
+#app > .editor .list-group { margin-bottom: 0; }
+#app > .editor .list-group .list-group-item:nth-of-type(even) { background-color: #f9f9f9; }
+#app > .editor .list-group a:last-child { margin-bottom: 20px; }
+#app > .editor .list-group-item { cursor: pointer; overflow: hidden; white-space: nowrap; }
+#app > .editor .list-group-item img { position:absolute; top:0; right:0; height: 100%; }
+#app > .editor .navbar-brand { cursor: pointer; }
+#app > .editor .btn-danger { position: absolute; top:0;right:0;bottom:0;border:0;border-radius:0; }
 @media (max-width: 767px) {
   //body.body-edit { padding-top: 170px; }
   //.list-group { padding-right: 0; }
 }
-#app > .edit #m { position: absolute; right: 2em; top: 0.5em; z-index: 100; }
+#app > .editor #m { position: absolute; right: 2em; top: 0.5em; z-index: 100; }
 
 //.list-group:last-child { padding-right: 0; }
 //.list-group { margin-bottom: 0; }
