--- a/pub/css/style.css
+++ b/pub/css/style.css
@@ -210,3 +210,4 @@ body.slide-active { overflow-x: hidden}
 #profile .container-fluid { margin-bottom: 1em; }
 #profile .ssh { word-break: break-all;}
 #profile { margin-bottom: 50px; }
+.pbo { margin-bottom: 1em; }
